methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:11: error: not found: value Dejafait
    while (Dejafait!=P){
           ^