methods.args.MethodsArgs.scala.code
def move(P:Int,A:Boolean){
  var DejaFait=0
 
  if (A==true){
    while (DejaFait!=P){
      avance()
    }
    
  }else{
    while (Dejafait!=P){
      recule()
    }
  }
}